--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "module": "^1.1.0",
     "rxjs": "~7.8.0",
     "sweet2": "^2.0.0",
-    "sweetalert2": "^11.15.10",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
