criação da tela de login e cadastro

--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
+    "@angular/fire": "^19.0.0",
     "@angular/forms": "^19.1.0",
-    "@angular/material": "^19.1.4",
+    "@angular/material": "^19.2.3",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "@sweetalert2/ngx-sweetalert2": "^13.0.0",
+    "firebase": "^11.4.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.16.0",
     "tslib": "^2.3.0",
